tests/expected/fib-rec-slow.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/fib-rec-slow.uc:[12:9]: error: I/O error Non-integer input
      n = input;
          ^

1
